--- a/Prototype.ipynb
+++ b/Prototype.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "52a0fa7a",
+   "id": "5e3d2192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "33c2bf7f",
+   "id": "a7e4e252",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "70445cb3",
+   "id": "adeead79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "05c692d4",
+   "id": "7012f9e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4d5f4102",
+   "id": "be358e24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "169f6bfb",
+   "id": "be06a7a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "246d4353",
+   "id": "93712d50",
    "metadata": {
     "scrolled": true
    },
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "f2b2a181",
+   "id": "73ad4bf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7dbca876",
+   "id": "479f06f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "9291c8b7",
+   "id": "1bf1039a",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e5073f44",
+   "id": "38fcde54",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "88daa583",
+   "id": "6855c67e",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "49fda9e3",
+   "id": "4163df82",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "36b519a9",
+   "id": "a01772e3",
    "metadata": {
     "scrolled": true
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "3e187790",
+   "id": "0b4ff740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "e3078196",
+   "id": "d0ca59cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "8937b74d",
+   "id": "ce460b5c",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "25f98814",
+   "id": "fc679003",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,12 +304,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91886e80",
+   "metadata": {},
+   "source": [
+    "# Main"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5900a39f",
+   "execution_count": 100,
+   "id": "f6743597",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "from bs4 import BeautifulSoup\n",
+    "from selenium import webdriver\n",
+    "driver=webdriver.Chrome()\n",
+    "def urlpage(pg):\n",
+    "    pg=str(pg)\n",
+    "    url='https://www.amazon.in/s?k=bags&crid=2M096C61O4MLT&qid=1653308124&sprefix=ba%2Caps%2C283&ref=sr_pg_1'\n",
+    "    if(pg==1):\n",
+    "        return url\n",
+    "    else:\n",
+    "        url='https://www.amazon.in/s?k=bags&page='+pg+'&crid=2M096C61O4MLT&qid=1675266421&sprefix=ba%2Caps%2C283&ref=sr_pg_'+pg\n",
+    "        return url\n",
+    "def extract_record(item):\n",
+    "    taga=item.h2.a\n",
+    "    name=taga.text.strip()\n",
+    "    try:\n",
+    "        produrl='https://www.amazon.com'+taga.get('href')\n",
+    "        price=item.find('span','a-price-whole').text\n",
+    "    except AttributeError:\n",
+    "        return\n",
+    "    try:\n",
+    "        rating=item.i.text\n",
+    "        no_rating=item.find('span','a-size-base s-underline-text').text\n",
+    "    except AttributeError:\n",
+    "        rating=''\n",
+    "        no_rating=''\n",
+    "    result=(name,price,rating,no_rating,produrl)\n",
+    "    return result\n",
+    "records=[]\n",
+    "for page in range(1,21):\n",
+    "    url=urlpage(page)\n",
+    "    driver.get(url)\n",
+    "    soup =BeautifulSoup(driver.page_source,'html.parser')\n",
+    "    results = soup.find_all('div',{'data-component-type':'s-search-result'})\n",
+    "    for i in results:\n",
+    "        record=extract_record(i)\n",
+    "        if record:\n",
+    "            records.append(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "a6df0a8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('results.csv','w',newline='',encoding='utf-8') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(['Name','Price','Rating','No. of Rating','Link'])\n",
+    "    writer.writerows(records)"
+   ]
   }
  ],
  "metadata": {
